# exif_data_collection

./: pyproject.toml
src/: album_data.py  driveDownload.py  exif_extractor.py  map.py  map_plot.py  run.py
tests/: test_image_dist.py
